Internal reservations Booking availability and times Reservation holds

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,7 +17,17 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 
 logging:
   level:
     org.hibernate.SQL: debug
+
+security:
+  jwt:
+    # Change this in production. Must be at least 32 chars for HS256.
+    secret: "change_this_secret_key_please_32_chars_min"
+    expiration-seconds: 3600
